[package]
name = "fadis_press"
version = "0.1.0"
authors = ["Orito Itsuki <20170107+MatchaChoco010@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.19.0"
vulkano-win = "0.19.0"
vulkano-shaders = "0.19.0"
winit = "0.22.2"
